--- a/SurveyBasket.api/appsettings.json
+++ b/SurveyBasket.api/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "",
+    "Issuer": "SurveyBasketApp",
+    "Audience": "SurveyBasketApp user",
+    "ExpiryMinutes": 30
+  }
 }
