--- a/SurveyBasket.api/appsettings.Development.json
+++ b/SurveyBasket.api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowOrigins": [
+    "https://example.com",
+    "https://another-origin.com"
+  ]
 }
