--- a/SurveyBasket.api/appsettings.json
+++ b/SurveyBasket.api/appsettings.json
@@ -15,5 +15,9 @@
     "Issuer": "SurveyBasketApp",
     "Audience": "SurveyBasketApp user",
     "ExpiryMinutes": 30
-  }
+  },
+  "AllowOrigins": [
+    "https://example.com",
+    "https://another-origin.com"
+  ]
 }
